file(GLOB SOURCE_FILES *.cpp *.h)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SIMPLE_CONTAINER_ARCHIVE_OUTPUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SIMPLE_CONTAINER_LIBRARY_OUTPUT_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SIMPLE_CONTAINER_RUNTIME_OUTPUT_DIR})

add_library(SimpleContainer STATIC 
	${SOURCE_FILES})

set_target_properties(SimpleContainer PROPERTIES COMPILE_FLAGS "/MTd")
set_target_properties(SimpleContainer PROPERTIES SUFFIX ".lib")
set_target_properties(SimpleContainer PROPERTIES FOLDER "Container Targets")

